--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "cms_pkcs7_parser"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "cms_pkcs7_parser"
+path = "src/lib.rs"
+
 [dependencies]
 anyhow = "1.0"
 bcder = "0.7.4"
